Fixes communities name cut off

--- a/public/stylesheets/blocks/profiles-list-block.scss
+++ b/public/stylesheets/blocks/profiles-list-block.scss
@@ -26,7 +26,7 @@
         display: inline-block;
         font-size: 1em;
         text-align: center;
-        padding-bottom: 4px;
+        padding-bottom: 1em;
         text-decoration: none;
 
         span.profile-image {
